# QtTorch

./: CMakeLists.txt  main.cpp
